--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
 <div class="container"> 
   <!-- Navigation -->
   <header> <a href="">
-    <h4 class="logo">Benoît</h4>
+    <h4 class="logo">Benoît code</h4>
     </a>
     <nav>
       <ul>
-        <li><a href="#hero">HOME</a></li>
-        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#hero">ACCUEIL&nbsp;</a></li>
+        <li><a href="#about">À PROPOS</a></li>
         <li> <a href="#contact">CONTACT</a></li>
       </ul>
     </nav>
   </header>
   <!-- Hero Section -->
   <section class="hero" id="hero">
-    <h2 class="hero_header">HERO <span class="light">LIGHT</span></h2>
-    <p class="tagline">Light is a simple one page website</p>
-  </section>
+    <h2 class="hero_header">Benoît Code…</h2>
+    <p class="tagline">Pour esssayer, pour s'ammuser…</p>
+</section>
   <!-- About Section -->
   <section class="about" id="about">
     <h2 class="hidden">About</h2>
