--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </a>
     <nav>
       <ul>
-        <li><a href="#hero">ACCUEIL&nbsp;</a></li>
+        <li><a href="#hero">ACCUEIL</a></li>
         <li><a href="#about">À PROPOS</a></li>
         <li> <a href="#contact">CONTACT</a></li>
       </ul>
